# web_redis

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
