[package]
name = "web_redis"
version = "0.1.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
dotenv = "0.15"
cfg-if = "0.1"
r2d2 = "0.8"
r2d2_redis = "0.13"
tokio = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0"
futures = "0.3"
