[package]
name = "web_redis"
version = "0.2.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
dotenv = "0.15"
cfg-if = "1"
redis = {version = "0.21"}
tokio = "1"
actix-web = "4"
actix-rt = "2"
actix-service = "2"
actix-http = "3"
futures = "0.3"
bb8-redis = "0.11"
